shim/shim.h

    /* Opaque types — defined in the vendored bmesh headers. */
    typedef struct BMesh BMesh;
    typedef struct BMVert BMVert;
    typedef struct BMEdge BMEdge;
    typedef struct BMFace BMFace;
    /* Common header shared by every BM element; used as a type-erased
     * element-pointer in mixed vert/edge/face buffers. */
    typedef struct BMHeader BMHeader;
    /* Extrude a region of faces. Marks each input face with BM_ELEM_TAG, then  */
    /* invokes BMesh's `extrude_face_region` operator with use_keep_orig=false.  */
    /* `use_normal_flip` is forwarded to the operator; when true it reverses the */
    /* winding of the side (wall) faces built between the original boundary and  */
    /* the lifted duplicate. Returns true on success, false if the operator     */
    /* rejected the input. */
    bool bms_extrude_face_region_ex(BMesh *bm, BMFace **faces, int faces_len,
                                    bool use_normal_flip);
    /* Convenience wrapper for bms_extrude_face_region_ex with                   */
    /* use_normal_flip=false. */
    bool bms_extrude_face_region(BMesh *bm, BMFace **faces, int faces_len);
    /* Extrude a region of faces, forwarding the operator's `edges_exclude` set. */
    /* Marks each input face with BM_ELEM_TAG and passes them as the operator's  */
    /* `geom` input, then populates the `edges_exclude` mapping slot with each   */
    /* edge in `edges_exclude[0..edges_exclude_len]`; excluded edges are not      */
    /* split off into the extruded region (their adjacent geometry stays joined  */
    /* to the original). `edges_exclude` may be null with edges_exclude_len == 0 */
    /* to request no exclusions. `use_keep_orig` and `use_normal_flip` are        */
    /* forwarded to the operator. Unlike bms_extrude_face_region_ex, the input    */
    /* faces are not killed after the op; deletion of selection-interior          */
    /* originals is left to the operator under use_keep_orig=false. Returns true  */
    /* on success, false if the operator rejected the input. */
    bool bms_extrude_face_region_exclude(BMesh *bm,
                                         BMFace **faces, int faces_len,
                                         BMEdge **edges_exclude, int edges_exclude_len,
                                         bool use_keep_orig,
                                         bool use_normal_flip);
    /* Extrude over the operator's native mixed `geom` element buffer. `geom`     */
    /* is a type-erased element buffer (%eb) of `geom_len` BMHeader* that may     */
    /* freely mix vert / edge / face pointers in one call; the operator routes    */
    /* each kind on its own (faces -> region extrude, edges -> edge-only walls,   */
    /* loose verts -> connecting wire edge). `edges_exclude` populates the        */
    /* operator's `edges_exclude` mapping slot; it may be null with               */
    /* edges_exclude_len == 0 for no exclusions. `use_keep_orig` and              */
    /* `use_normal_flip` are forwarded verbatim. No input elements are killed     */
    /* after the op; deletion of selection-interior originals is left to BMesh,   */
    /* so loose verts and wire edges (which have no interior) are preserved.      */
    /* Returns true on success, false if the operator rejected the input. */
    bool bms_extrude_face_region_geom(BMesh *bm,
                                      BMHeader **geom, int geom_len,
                                      BMEdge **edges_exclude, int edges_exclude_len,
                                      bool use_keep_orig,
                                      bool use_normal_flip);
    /* Extrude a region of faces, forwarding the operator's                      */
    /* `use_normal_from_adjacent` slot. Marks each input face with BM_ELEM_TAG    */
    /* and passes them as the operator's `geom` input. `use_keep_orig`,           */
    /* `use_normal_flip`, and `use_normal_from_adjacent` are forwarded to the     */
    /* operator. When `use_normal_from_adjacent` is true, the side (wall) faces   */
    /* take their orientation from geometry adjacent to the extruded region       */
    /* rather than from the region's own averaged normal. Unlike                  */
    /* bms_extrude_face_region_ex, the input faces are not killed after the op;   */
    /* the surrounding geometry is left intact. Returns true on success, false    */
    /* if the operator rejected the input. */
    bool bms_extrude_face_region_normal_from_adjacent(BMesh *bm,
                                                      BMFace **faces, int faces_len,
                                                      bool use_keep_orig,
                                                      bool use_normal_flip,
                                                      bool use_normal_from_adjacent);
    /* Extrude a region of faces, forwarding the operator's                       */
    /* `use_dissolve_ortho_edges` slot. Refreshes face normals, then marks the    */
    /* full closure of each input face -- the face and its edges and verts -- with*/
    /* BM_ELEM_TAG and passes them as the operator's `geom` input. The region's   */
    /* edges must be in `geom` for the dissolve pass to run: the operator only    */
    /* treats a region edge as a dissolve candidate once it has deleted the       */
    /* original it lifted off, and that deletion is gated on the region's edges   */
    /* being present in `geom`. When `use_dissolve_ortho_edges` is true, side     */
    /* (wall) faces that end up lying in the plane of the extruded region are     */
    /* dissolved back into the surround (decided from the refreshed face          */
    /* normals), and the verts left as edge-pairs by those merges are collapsed.  */
    /* `use_keep_orig` and `use_normal_flip` are forwarded too; note the dissolve */
    /* pass only has effect when originals are deleted, i.e. use_keep_orig=false. */
    /* Returns true on success, false if the operator rejected the input. */
    bool bms_extrude_face_region_dissolve_ortho(BMesh *bm,
                                                BMFace **faces, int faces_len,
                                                bool use_keep_orig,
                                                bool use_normal_flip,
                                                bool use_dissolve_ortho_edges);
    /* Extrude faces individually (discrete). Marks each input face with         */
    /* BM_ELEM_TAG, then invokes BMesh's `extrude_discrete_faces` operator. Each */
    /* input face is extruded on its own, so two formerly-adjacent input faces   */
    /* split apart along their shared edge rather than lifting as one connected  */
    /* region. The operator itself deletes the original faces (keeping their     */
    /* edges/verts as wall bottoms), so this shim performs no post-op kill.      */
    /* `use_normal_flip` is forwarded to the operator; when true it reverses the */
    /* winding of the side (wall) faces. Returns true on success, false if the   */
    /* operator rejected the input. */
    bool bms_extrude_discrete_faces_ex(BMesh *bm, BMFace **faces, int faces_len,
                                       bool use_normal_flip);
    /* Convenience wrapper for bms_extrude_discrete_faces_ex with                 */
    /* use_normal_flip=false. */
    bool bms_extrude_discrete_faces(BMesh *bm, BMFace **faces, int faces_len);
    /* Extrude edges only. Marks each input edge with BM_ELEM_TAG, then invokes  */
    /* BMesh's `extrude_edge_only` operator. Each input edge gains one wall quad  */
    /* spanning the original edge and its lifted duplicate; a contiguous strip   */
    /* of input edges produces a continuous ribbon sharing vertical edges        */
    /* between adjacent walls. The original edges/verts/faces are kept in place  */
    /* (they may still attach to non-input surrounding faces), so this shim      */
    /* performs no post-op kill. `use_normal_flip` is forwarded to the operator; */
    /* when true it reverses the winding of each wall quad. Returns true on      */
    /* success, false if the operator rejected the input. */
    bool bms_extrude_edge_only_ex(BMesh *bm, BMEdge **edges, int edges_len,
                                  bool use_normal_flip);
    /* Convenience wrapper for bms_extrude_edge_only_ex with                      */
    /* use_normal_flip=false. */
    bool bms_extrude_edge_only(BMesh *bm, BMEdge **edges, int edges_len);
    /* Extrude vertices individually. Marks each input vert with BM_ELEM_TAG,     */
    /* then invokes BMesh's `extrude_vert_indiv` operator. For each input vert a   */
    /* duplicate vert is created at the same position and a fresh wire edge        */
    /* connects the original to the duplicate. The operation is purely additive:   */
    /* the original verts are kept in place, so this shim performs no post-op      */
    /* kill. The caller is responsible for displacing the new verts after the      */
    /* call. Returns true on success, false if the operator rejected the input.   */
    bool bms_extrude_vert_indiv(BMesh *bm, BMVert **verts, int verts_len);
    /* Inset a region of faces. Marks each input face with BM_ELEM_TAG, then
     * invokes BMesh's `inset_region` operator. Every parameter the operator
     * exposes is forwarded explicitly so A/B tests can pin each parameter axis.
     *
     * `faces_exclude` is the same shape as `faces` and may be `nullptr` /
     * `faces_exclude_len == 0` if no exclusion list is needed. It is only
     * meaningful when `use_outset` is true; otherwise the operator ignores it.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_inset_region(BMesh *bm,
                          BMFace **faces, int faces_len,
                          BMFace **faces_exclude, int faces_exclude_len,
                          bool use_boundary,
                          bool use_even_offset,
                          bool use_interpolate,
                          bool use_relative_offset,
                          bool use_edge_rail,
                          bool use_outset,
                          float thickness,
                          float depth);
    /* Inset each input face individually (no shared boundary handling). Marks
     * each input face with BM_ELEM_TAG, then invokes BMesh's `inset_individual`
     * operator.
     *
     * Returns true on success, false if BMO_op_initf rejected the input. */
    bool bms_inset_individual(BMesh *bm,
                              BMFace **faces, int faces_len,
                              bool use_even_offset,
                              bool use_interpolate,
                              bool use_relative_offset,
                              float thickness,
                              float depth);