src/lib.rs


    /// Like [`bms_face_poke_mode`], but additionally lifts the new centre
    /// vertex along the source face's normal. `center_mode` selects the centre
    /// formula exactly as in [`bms_face_poke_mode`]. The lift applied to the
    /// centre vertex is `face_normal * offset * scale`, where `scale` is the
    /// arithmetic mean of the corner-to-centre distances when
    /// `use_relative_offset` is `true`, and `1.0` otherwise; it is applied
    /// after customdata interpolation, so interpolation sees the un-lifted
    /// position. Returns the new centre vertex, or null if the face has fewer
    /// than 3 corners (or exceeds the internal ngon capacity).
    pub fn bms_face_poke_offset(
        bm: *mut BMesh,
        face: *mut BMFace,
        center_mode: c_int,
        offset: f32,
        use_relative_offset: bool,
    ) -> *mut BMVert;

    /// bmesh: `BM_vert_dissolve`. Returns true on success, false if the
    /// vertex's topology is unsupported (and the mesh is left unchanged).
    pub fn bms_vert_dissolve(bm: *mut BMesh, v: *mut BMVert) -> bool;

    /// Marks each input face with `BM_ELEM_TAG`, then invokes BMesh's
    /// `extrude_face_region` operator.
    ///
    /// Note: Originals are replaced by the duplicates (aka `use_keep_orig=false`)
    ///
    /// `use_normal_flip` is forwarded to the operator; when `true` it reverses
    /// the winding of the side (wall) faces built between the original boundary
    /// and the lifted duplicate.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_extrude_face_region_ex(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        use_normal_flip: bool,
    ) -> bool;

    /// Convenience wrapper for [`bms_extrude_face_region_ex`] with
    /// `use_normal_flip = false`.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_extrude_face_region(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
    ) -> bool;

    /// Extrudes a region of faces while forwarding the operator's
    /// `edges_exclude` set.
    ///
    /// `faces` points to `faces_len` `*mut BMFace`; each is passed as the
    /// operator's `geom` input. `edges_exclude` points to `edges_exclude_len`
    /// `*mut BMEdge` inserted into the operator's `edges_exclude` mapping slot;
    /// it may be null when `edges_exclude_len == 0` to request no exclusions.
    /// `use_keep_orig` and `use_normal_flip` are forwarded to the operator.
    ///
    /// Unlike [`bms_extrude_face_region_ex`], the input faces are not killed
    /// after the op; deletion of selection-interior originals is left to the
    /// operator under `use_keep_orig = false`.
    ///
    /// Returns false if the operator rejected the input.
    ///
    /// # Safety
    ///
    /// `bm` must be a valid mesh. `faces` must be valid for `faces_len`
    /// elements and `edges_exclude` valid for `edges_exclude_len` elements
    /// (or null when the length is zero). All referenced elements must belong
    /// to `bm`.
    pub fn bms_extrude_face_region_exclude(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        edges_exclude: *mut *mut BMEdge,
        edges_exclude_len: c_int,
        use_keep_orig: bool,
        use_normal_flip: bool,
    ) -> bool;

    /// Extrudes over the operator's native mixed `geom` element buffer.
    ///
    /// `geom` is a type-erased element buffer (the `%eb` slot format): a
    /// pointer to `geom_len` [`BMHeader`] pointers that may freely mix
    /// vert / edge / face pointers in a single call (the header is the
    /// first field of every element, so each may be cast to `*mut BMHeader`).
    /// The operator routes each element kind on its own: faces drive a
    /// connected region extrude, edges build edge-only walls, and loose
    /// verts spawn a connecting wire edge to their lifted duplicate.
    ///
    /// `edges_exclude` points to `edges_exclude_len` `*mut BMEdge` inserted
    /// into the operator's `edges_exclude` mapping slot; it may be null when
    /// `edges_exclude_len == 0` to request no exclusions. `use_keep_orig`
    /// and `use_normal_flip` are forwarded verbatim.
    ///
    /// No input elements are killed after the op; deletion of
    /// selection-interior originals is left to BMesh, so loose verts and
    /// wire edges (which have no interior) are preserved.
    ///
    /// Returns false if the operator rejected the input.
    ///
    /// # Safety
    ///
    /// `bm` must be a valid mesh. `geom` must be valid for `geom_len`
    /// elements and `edges_exclude` valid for `edges_exclude_len` elements
    /// (or null when the length is zero). All referenced elements must
    /// belong to `bm`.
    pub fn bms_extrude_face_region_geom(
        bm: *mut BMesh,
        geom: *mut *mut BMHeader,
        geom_len: c_int,
        edges_exclude: *mut *mut BMEdge,
        edges_exclude_len: c_int,
        use_keep_orig: bool,
        use_normal_flip: bool,
    ) -> bool;

    /// Extrudes a region of faces while forwarding the operator's
    /// `use_normal_from_adjacent` slot.
    ///
    /// `faces` points to `faces_len` `*mut BMFace`; each is passed as the
    /// operator's `geom` input. `use_keep_orig`, `use_normal_flip`, and
    /// `use_normal_from_adjacent` are forwarded to the operator. When
    /// `use_normal_from_adjacent` is `true`, the side (wall) faces take their
    /// orientation from geometry adjacent to the extruded region rather than
    /// from the region's own averaged normal.
    ///
    /// Unlike [`bms_extrude_face_region_ex`], the input faces are not killed
    /// after the op; the surrounding geometry is left intact.
    ///
    /// Returns false if the operator rejected the input.
    ///
    /// # Safety
    ///
    /// `bm` must be a valid mesh. `faces` must be valid for `faces_len`
    /// elements and all referenced faces must belong to `bm`.
    pub fn bms_extrude_face_region_normal_from_adjacent(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        use_keep_orig: bool,
        use_normal_flip: bool,
        use_normal_from_adjacent: bool,
    ) -> bool;

    /// Extrude a region of faces, forwarding the operator's
    /// `use_dissolve_ortho_edges` slot. Refreshes face normals, then tags each
    /// input face with `BM_ELEM_TAG` and passes the faces as the operator's
    /// `geom` input (a face-set region extrude, where naming a face implies its
    /// closure of edges and verts). When `use_dissolve_ortho_edges` is true,
    /// side (wall) faces that end up lying in the plane of the extruded region
    /// are dissolved back into the surround, and the verts left as edge-pairs
    /// by those merges are collapsed. `use_keep_orig` and `use_normal_flip` are
    /// forwarded too. No originals are killed by this wrapper.
    ///
    /// Returns false if the operator rejected the input.
    ///
    /// # Safety
    ///
    /// `bm` must be a valid mesh. `faces` must be valid for `faces_len`
    /// elements and all referenced faces must belong to `bm`.
    pub fn bms_extrude_face_region_dissolve_ortho(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        use_keep_orig: bool,
        use_normal_flip: bool,
        use_dissolve_ortho_edges: bool,
    ) -> bool;

    /// Marks each input face with `BM_ELEM_TAG`, then invokes BMesh's
    /// `extrude_discrete_faces` operator. Each face is extruded individually,
    /// so two formerly-adjacent input faces split apart along their shared
    /// edge rather than lifting as one connected region.
    ///
    /// The operator deletes the original faces internally (keeping their
    /// edges/verts as wall bottoms), so every input face is replaced by its
    /// lifted duplicate.
    ///
    /// `use_normal_flip` is forwarded to the operator; when `true` it reverses
    /// the winding of the side (wall) faces.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_extrude_discrete_faces_ex(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        use_normal_flip: bool,
    ) -> bool;

    /// Convenience wrapper for [`bms_extrude_discrete_faces_ex`] with
    /// `use_normal_flip = false`.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_extrude_discrete_faces(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
    ) -> bool;

    /// Marks each input edge with `BM_ELEM_TAG`, then invokes BMesh's
    /// `extrude_edge_only` operator. Each input edge gains one wall quad
    /// spanning the original edge and its lifted duplicate; a contiguous strip
    /// of input edges produces a continuous ribbon sharing vertical edges
    /// between adjacent walls.
    ///
    /// The originals are kept in place (no post-op kill), so input edges, verts
    /// and faces remain valid after the call.
    ///
    /// `use_normal_flip` is forwarded to the operator; when `true` it reverses
    /// the winding of each wall quad.
    ///
    /// `edges` must point to `edges_len` valid `*mut BMEdge` belonging to `bm`.
    /// Returns false if the operator rejected the input.
    pub fn bms_extrude_edge_only_ex(
        bm: *mut BMesh,
        edges: *mut *mut BMEdge,
        edges_len: c_int,
        use_normal_flip: bool,
    ) -> bool;

    /// Convenience wrapper for [`bms_extrude_edge_only_ex`] with
    /// `use_normal_flip = false`.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_extrude_edge_only(
        bm: *mut BMesh,
        edges: *mut *mut BMEdge,
        edges_len: c_int,
    ) -> bool;

    /// Marks each input vert with `BM_ELEM_TAG`, then invokes BMesh's
    /// `extrude_vert_indiv` operator. For each input vert a duplicate vert is
    /// created at the same position and a fresh wire edge connects the original
    /// to the duplicate.
    ///
    /// The operation is purely additive: the original verts are never deleted
    /// (no post-op kill), so the input verts remain valid after the call. The
    /// caller is responsible for displacing the new verts after the call.
    ///
    /// `verts` must point to `verts_len` valid `*mut BMVert` belonging to `bm`.
    /// Returns false if the operator rejected the input.
    pub fn bms_extrude_vert_indiv(
        bm: *mut BMesh,
        verts: *mut *mut BMVert,
        verts_len: c_int,
    ) -> bool;

    /// Marks each input face with `BM_ELEM_TAG`, then invokes BMesh's
    /// `inset_region` operator. Every parameter the operator exposes is
    /// forwarded explicitly so A/B tests can pin each parameter axis.
    ///
    /// `faces_exclude` may be null with `faces_exclude_len = 0` when no
    /// exclusion list is needed; the operator itself only consults it when
    /// `use_outset` is true.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_inset_region(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        faces_exclude: *mut *mut BMFace,
        faces_exclude_len: c_int,
        use_boundary: bool,
        use_even_offset: bool,
        use_interpolate: bool,
        use_relative_offset: bool,
        use_edge_rail: bool,
        use_outset: bool,
        thickness: f32,
        depth: f32,
    ) -> bool;

    /// Marks each input face with `BM_ELEM_TAG`, then invokes BMesh's
    /// `inset_individual` operator. Each face is inset in its own plane,
    /// independently of its neighbours.
    ///
    /// Returns false if the operator rejected the input.
    pub fn bms_inset_individual(
        bm: *mut BMesh,
        faces: *mut *mut BMFace,
        faces_len: c_int,
        use_even_offset: bool,
        use_interpolate: bool,
        use_relative_offset: bool,
        thickness: f32,
        depth: f32,
    ) -> bool;
